--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_svg: ^0.22.0
+  retrofit: ^2.0.1
+  analyzer: ^2.6.0
+  dio: ^4.0.0
+  json_serializable: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -32,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^2.0.1+2
+  build_runner: ^2.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -47,6 +52,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/splash_logo.png
+     - assets/images/onboarding_logo1.svg
+     - assets/images/onboarding_logo2.svg
+     - assets/images/onboarding_logo3.svg
+     - assets/images/onboarding_logo4.svg
+     - assets/images/hollow_cirlce_ic.svg
+     - assets/images/left_arrow_ic.svg
+     - assets/images/right_arrow_ic.svg
+     - assets/images/solid_circle_ic.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
